[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'ChaProEV'
version = '0.1.3'
authors = [
  { name='Omar Usmani', email='Omar.Usmani@TNO.nl' },
]
description = 'ChaProEV: Charging Profiles of Electric Vehicles'
readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]
dynamic = ['dependencies']
[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}

[project.urls]
'Homepage' = 'https://github.com/TNO/ChaProEV'


